--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -1,11 +1,16 @@
+@charset "UTF-8";
+
 body {
     background-color: #0D1B1E;
 }
 
-.cadastro {
-    width: 25%;
+section {
     margin: auto;
-    margin-top: 3%;
+}
+
+.cadastro {
+    width: 40%;
+    margin: auto;
     border-radius: 10px;
     background-color: #C3DBC5;
     box-sizing: border-box;
@@ -28,12 +33,14 @@ input {
     margin: 10px;
     border-radius: 5px;
     border: 0 black solid;
-    padding: 5px;
+    padding: 10px;
     width: 90%;
 }
 
 input::placeholder {
     color: #0D1B1E;
+    font-size: 1.1em;
+    font-weight: 600;
 }
 
 select {
@@ -79,4 +86,34 @@ p {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.submit {
+    width: 200px;
+    padding: 10px;
+    font-size: 1.1em;
+    color: white;
+    background-color: #0D1B1E;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.submit:hover {
+    color: white;
+    text-decoration: underline;
+    background-color: black;
+}
+
+.upload {
+    border: 1px solid black;
+    margin-top: 15px;
+    padding: 10px;
+}
+
+.upload img {
+    width: 70px;
+}
+
+input[type="file" i] {
+    background-color: black;
 }
