--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,8 +13,50 @@
 
 #produtos {
     background-color: whitesmoke;
-    color: #FF5964;
     text-align: center;
+}
+
+.produtos {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+
+.produto {
+    width: 300px;   
+    height: 400px;
+    border: 1px black solid;
+    margin-bottom: 20px;
+    border-radius: 15px;
+    transition: 0.4s;
+}
+
+.produto:hover {
+    box-shadow: 2px 2px 4px black; 
+}
+
+.produto h2 {
+    margin-top: 15px;
+    font-size: 1.5em;
+}
+
+.produto h3 {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+}
+
+.produto a {
+    color: white;
+    font-weight: 600;
+    font-size: 1.3em;
+    background-color: #0D1B1E;
+    padding: 15px;
+    transition: 0.4s;
+}
+
+.produto a:hover {
+    text-decoration: underline;
 }
 
 #seja-membro {
