--- a/public/css/adm.css
+++ b/public/css/adm.css
@@ -78,7 +78,12 @@ p {
     font-size: 1.4em;
 }
 
+.botoes {
+    display: flex;
+}
+
 .botao {
+    margin-right: 10px;
     padding: 10px;
     border-radius: 10px;
     border: 0px black solid;
@@ -86,8 +91,13 @@ p {
     font-size: 1.3em; 
     cursor: pointer;
     color: whitesmoke;
+    transition: 0.4s;
 }
 
+.botao:hover {
+    background-color: #ff5656;
+    text-decoration: underline;
+}
 
 .acoes {
     display: flex;
