--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,15 +4,14 @@
     margin: 0;
 }
 
+
 #banner {
-    background-color: whitesmoke;
     color: #FF5964;
     padding: 250px;
     text-align: center;
 }
 
 #produtos {
-    background-color: whitesmoke;
     text-align: center;
 }
 
@@ -24,26 +23,25 @@
 
 
 .produto {
-    width: 300px;   
-    height: 400px;
-    border: 1px black solid;
+    width: 300px;
+    height: 450px;
     margin-bottom: 20px;
     border-radius: 15px;
     transition: 0.4s;
 }
 
 .produto:hover {
-    box-shadow: 2px 2px 4px black; 
+    box-shadow: 0px 0px 10px black; 
 }
 
 .produto h2 {
-    margin-top: 15px;
+    margin-bottom: 15px;
     font-size: 1.5em;
 }
 
 .produto h3 {
     font-size: 1.5em;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 
 .produto a {
@@ -59,6 +57,12 @@
     text-decoration: underline;
 }
 
+.produto img {
+    width: 300px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
 #seja-membro {
     background-color: #C3DBC5;
     color: #0D1B1E;
@@ -66,7 +70,3 @@
     text-align: center;
 }
 
-footer {
-    background-color: #0D1B1E;
-    padding: 200px;
-}
