--- a/public/css/index.css
+++ b/public/css/index.css
@@ -35,6 +35,7 @@
 }
 
 .produto h2 {
+    margin-top: -20px;
     margin-bottom: 15px;
     font-size: 1.5em;
 }
@@ -51,6 +52,7 @@
     background-color: #0D1B1E;
     padding: 15px;
     transition: 0.4s;
+    border-radius: 10px;
 }
 
 .produto a:hover {
