--- a/public/css/cabecalho.css
+++ b/public/css/cabecalho.css
@@ -29,8 +29,8 @@ nav a {
 }
 
 .imagem {
-    height: 75px;
-    width: 75px;
+    height: 50px;
+    width: 50px;
     margin-right: 10px;
 }
 
@@ -53,7 +53,7 @@ nav a {
 .pesquisar {
     border-radius: 10px;
     padding: 10px;
-    width: 320px;
+    width: 500px;
     border: 0px;
     font-size: 1.1em;
 }
@@ -87,4 +87,8 @@ button {
     height: 0px;
     padding: 0px;
     cursor: pointer;
+}
+
+.icone {
+    width: 40px;
 }
