--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url(buscaProduto.css);
 
 * {
     margin: 0;
@@ -11,59 +12,6 @@
     text-align: center;
 }
 
-#produtos {
-    text-align: center;
-}
-
-.produtos {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-
-.produto {
-    width: 300px;
-    height: 450px;
-    margin-bottom: 20px;
-    border-radius: 15px;
-    transition: 0.4s;
-}
-
-.produto:hover {
-    box-shadow: 0px 0px 10px black; 
-}
-
-.produto h2 {
-    margin-top: -20px;
-    margin-bottom: 15px;
-    font-size: 1.5em;
-}
-
-.produto h3 {
-    font-size: 1.5em;
-    margin-bottom: 25px;
-}
-
-.produto a {
-    color: white;
-    font-weight: 600;
-    font-size: 1.3em;
-    background-color: #0D1B1E;
-    padding: 15px;
-    transition: 0.4s;
-    border-radius: 10px;
-}
-
-.produto a:hover {
-    text-decoration: underline;
-}
-
-.produto img {
-    width: 300px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-}
 
 #seja-membro {
     background-color: #C3DBC5;
