--- a/public/css/cabecalho.css
+++ b/public/css/cabecalho.css
@@ -71,17 +71,17 @@ nav a {
 
 .lupa {
     width: 30px;
-    margin-top: -15px;
-    margin-left: -30px;
+    margin-left: -60px;
 }
 
-form {
+.forms {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-button {
+.botao-cabecalho {
+    margin-bottom: 40px;
     border: 0px;
     width: 0px;
     height: 0px;
