--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -17,6 +17,7 @@ section {
     padding: 15px;
     box-shadow: 0px 0px 10px white;
     text-align: center;
+    margin-top: 15px;
 }
 
 .login {
@@ -45,19 +46,32 @@ input::placeholder {
 
 select {
     margin: 5px;
-    width: 92%;
+    width: 94%;
     border: 0 black solid;
     padding: 5px;
     border-radius: 5px;
+    font-weight: 600;
+    font-size: 1.1em;
+    color: #0D1B1E;
 }
+
 
 option {
-    font-size: 1.3em;
+    background-color: #374e5c;
+    color: white;   
 }
 
-option:active {
-    background-color: #C3DBC5;
+textarea {
+    border-radius: 10px;
+    padding: 10px;
+    color: #0D1B1E;
+    font-size: 1.1em;
+    font-weight: 600;
+    border: 0 black solid;
+    width: 90%;
+    margin: 10px;
 }
+
 
 button {
     margin-top: 15px;
