--- a/public/css/dashboardFunc.css
+++ b/public/css/dashboardFunc.css
@@ -1,18 +1,7 @@
 @charset "UTF-8";
 
-body {
-    background-color: var(--cor6);
-}
-
-main {
-    margin: 50px auto;
-    width: 70%;
-}
-
 #cadastrados {
     margin: 30px;
-    border: 1px solid var(--cor3);
-    border-radius: 20px;
 }
 
 .novo a {
@@ -21,7 +10,6 @@ main {
 
 #cadastrados h1 {
     text-align: center;
-    color: var(--cor1);
     margin-top: 30px;
 }
 
@@ -87,11 +75,15 @@ main {
 .produto {
     display: flex;
     height: 200px;
-    background-color: #b1d891e8;
+    background-color: #6d89b3;
     margin-bottom: 15px;
     align-items: center;
     border-radius: 10px;
     justify-content: space-between;
+}
+
+.produto a {
+    text-decoration: none;
 }
 
 .produto img {
@@ -103,17 +95,17 @@ main {
 
 .produto h2 {
     width: 300px;
-    color: #416d86;
+    color: white;
     text-align: center;
 }
 
 .produto p {
     font-size: 1.4em;
-    color: #416d86;
+    color: black;
 }
 
 .produto h3 {
-    color: #416d86;
+    color: white;
     font-size: 1.4em;
 }
 
