--- a/public/css/dashboardFunc.css
+++ b/public/css/dashboardFunc.css
@@ -4,8 +4,17 @@
     margin: 30px;
 }
 
-.novo a {
-    color: black;
+.cadastro {
+    background-color: rgba(0, 0, 0, 0.808);
+    font-size: 1.4em;
+    padding: 10px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: white;
+}
+
+.cadastro:hover {
+    text-decoration: underline;
 }
 
 #cadastrados h1 {
@@ -60,6 +69,7 @@
     text-align: center;
     padding: 10px;
     width: 200px;
+    display: flex;
 }
 
 .preco {
@@ -111,14 +121,19 @@
 
 .botao, .atualizar {
     text-align: center;
-    width: 150px;
+    width: 80px;
     padding: 5px 10px;
     font-size: 1.2em;
     font-weight: 600;
-    background-color: #6a8158;
+    background-color: #49687a;
     transition: 0.3s;
     border-radius: 10px;
-    margin-bottom: 10px;
+    margin-left: 5px;
+}
+
+.botao a, .atualizar a {
+    text-decoration: none;
+    color: white;
 }
 
 .atualizar:hover {
