--- a/public/css/carrinho.css
+++ b/public/css/carrinho.css
@@ -1,6 +1,169 @@
 @charset "UTF-8";
 
-.produtos {
+
+.titulo {
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.carrinho {
     display: flex;
+    margin: 20px;
+    justify-content: space-around;
+    max-width: 1200px;
+    padding: 15px;
+    border-radius: 15px;
+    margin: auto;
+}
+
+.produtos {
+    margin-right: 50px;
+}
+
+.produto {
+    display: flex;
+    border: 1px black solid;
+    border-radius: 10px;
+    width: 600px;
+    align-items: center;
     margin-bottom: 10px;
+    background-color: #6D89B3;
+}
+
+.produto img {
+    width: 150px;
+    border-radius: 20px;
+    margin-left: 10px;
+}
+
+.info {
+    text-align: center;
+    margin-left: 20px;
+    width: 250px;
+}
+
+.nome {
+    width: 150%;
+    margin-bottom: 10px;
+    margin-left: -12%;
+    color: white;
+}
+
+.label {
+    font-size: 1.1em;
+    text-align: left;
+}
+
+.qtd {
+    width: 50%;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    background-color: white;
+}
+
+.preco {
+    margin-top: 30px;
+    margin-left: -20px;
+    padding: 10px;
+    border-radius: 20px;
+    background-color: white;
+}
+
+button {
+    border: 0 solid black;
+    background-color: #6D89B3;
+    padding: 0;
+    margin: 0;
+    border-radius: 15px;
+}
+
+.excluir{
+    width: 140px;
+    height: 200px;
+    background-color: #6D89B3;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    transition: 0.3s;
+}
+
+.excluir:hover {
+    background-color: red;
+    cursor: pointer;
+}
+
+.resumo {
+    width: 350px;
+    background-color: #6D89B3;
+    border-radius: 20px;
+    padding: 10px;
+    color: white;
+}
+
+.multi {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    align-items: center;
+}
+
+.multi div {
+    display: flex;
+    background-color: white;
+    border-radius: 10px;
+    padding: 5px;
+    color: black;
+}
+
+.resumo-preco {
+    margin-right: 5px;
+}
+
+.frete {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    align-items: center;
+}
+
+.frete h2 {
+    background-color: white;
+    border-radius: 15px;
+    padding: 10px;
+    font-size: 1.3em;
+    margin-bottom: 20px;
+    color: black;
+}
+
+.borda {
+    border: 2px solid black;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.botao {
+    text-decoration: none;
+    color: white;
+    font-size: 1.3em;
+    text-align: center;
+    width: 200px;
+    transition: 0.3s;
+}
+
+.botao div {
+    background-color: #0D1B1E;
+    width: 200px;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.botao:hover {
+    text-decoration: underline;
+    color: white;
 }
