--- a/public/css/carrinho.css
+++ b/public/css/carrinho.css
@@ -167,3 +167,18 @@ button {
     text-decoration: underline;
     color: white;
 }
+
+.erro {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.erro h2 {
+    font-size: 2em;
+    margin-bottom: 15px;
+}
+
+.erro a {
+    color: black;
+    font-size: 1.4em;
+}
