--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -121,13 +121,33 @@ p {
 .upload {
     border: 1px solid black;
     margin-top: 15px;
-    padding: 10px;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #6D99B3;
 }
 
 .upload img {
     width: 70px;
+    margin-bottom: 20px;
 }
 
-input[type="file" i] {
-    background-color: black;
+input[type="file"] {
+    display: none;
+}
+
+label {
+    padding: 10px;
+    width: 400px;
+    background-color: #222E36;
+    color: #FFF;
+    font-size: 1.3em;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    display: block;
+    margin: auto;
+    border-radius: 10px;
 }
