--- a/public/css/produto.css
+++ b/public/css/produto.css
@@ -1,57 +1,91 @@
 @charset "UTF-8";
 
 section {
-    display: flex;
-}
-
-.imagem-produto {
-    width: 450px;
-}
-
-.imagens-produto {
-    width: 300px;
-}
-
-#accordion-1{
-  position: relative;
-  box-shadow: 0px 1px 7px #DBDBDB;
-}
-
-#accordion-1 .head{
-  background-color: #FFFFFF;
-  color: #563e6e;
-  padding: 20px 30px;
-  cursor: pointer;
-  transition: 0.2s ease;
   display: flex;
-  justify-content: space-between;
+  max-width: 80vw;
+  margin: auto;
+  margin-top: 20px;
+  justify-content: space-evenly;
   align-items: center;
 }
 
-#accordion-1 .arrow{
-  color: #563e6e;
-  font-size: 60px;
-  transition: 0.25s ease;
-  opacity: 0.3;
-  transform: rotate(-90deg);
+.imagem-produto {
+  width: 450px;
+  margin-left: 10px;
+  border-radius: 15px;
 }
 
-#accordion-1 .head:hover .arrow{
-  opacity: 1;
+.imagens-produto {
+  width: 150px;
+  margin-left: 10px;
+  border-radius: 15px;
 }
 
-#accordion-1 .head:hover, #accordion-1 .active{
-  background-color: #FFE77AFF;
+.imagens-produto:hover {
+  cursor: pointer;
 }
 
-#accordion-1 .arrow-animate{
-  transform: rotate(0deg);
-  opacity: 1;
+.imagens-sec {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-#accordion-1 .content{
-  background-color: #FFFFFF;
-  display: none;
-  padding: 20px 30px;
-  color: #333333;
+.info {
+  width: 50vw;
+}
+
+.info h1 {
+  text-align: center;
+  margin-top: -50px;
+}
+
+.info h3 {
+  margin-bottom: 20px;
+}
+.descricao p {
+  font-size: 1.2em;
+  text-indent: 10px;
+  text-align: justify;
+}
+
+.qtd {
+  margin: 5px;
+    width: 94%;
+    border: 1px black solid;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 1.1em;
+    color: #0D1B1E;
+    padding: 5px;
+}
+
+.qtd option {
+  background-color: #374e5c;
+    color: white; 
+}
+
+.descricao {
+  width: 50vw;
+  margin: auto;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.botao {
+  cursor: pointer;
+  width: 300px;
+  border: 0px solid black;
+  padding: 10px;
+  font-size: 1.4em;
+  border-radius: 10px;
+  background-color: #374e5c;
+  color: white;
+  margin-top: 20px;
+}
+
+.botao:hover {
+  text-decoration: underline;
 }
