--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,18 +5,69 @@
     margin: 0;
 }
 
-
 #banner {
-    color: #FF5964;
-    padding: 250px;
+    margin-top: 30px;
     text-align: center;
+    margin-bottom: 30px;
 }
 
+#banner h2{
+    color: #0D1B1E;
+    font-size: 1.5em;
+    margin-bottom: 20px;
+}
+
+.carrossel img {
+    width: 60vw;
+    border-radius: 20px;
+}
 
 #seja-membro {
-    background-color: #C3DBC5;
+    margin-top: 50px;
+    border-radius: 15px;
+    padding: 20px;
+    background-color: #91c9e9;
+    max-width: 80vw;
+    margin: auto;
+    margin-bottom: 50px;
+}
+
+#seja-membro h2{
     color: #0D1B1E;
-    padding: 300px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.chamada {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.chamada img {
+    width: 50%;
+    margin-right: 20px;
+    border-radius: 10px;
+}
+
+.chamada h4 {
+    font-size: 1.5em;
+    margin-bottom: 15px;
     text-align: center;
 }
 
+.chamada ul {
+    margin-bottom: 20px;
+}
+
+.chamada ul li {
+    font-size: 1.4em;
+    margin-bottom: 10px;
+    text-decoration: underline;
+}
+
+.chamada h3 {
+    text-align: center;
+    font-size: 2em;
+    color: rgb(255, 120, 71);
+}
