--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -20,6 +20,17 @@ section {
     margin-top: 15px;
 }
 
+.cadastro h3 {
+    color: red;
+    background-color: black;
+    width: 70%;
+    text-align: center;
+    margin: auto;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
 .login {
     margin-top: 10%;
 }
@@ -119,7 +130,6 @@ p {
 }
 
 .upload {
-    border: 1px solid black;
     margin-top: 15px;
     padding: 15px;
     border-radius: 10px;
