--- a/public/css/index.css
+++ b/public/css/index.css
@@ -18,7 +18,7 @@
 }
 
 .carrossel img {
-    width: 60vw;
+    width: 1500px;
     border-radius: 20px;
 }
 
@@ -45,7 +45,6 @@
 }
 
 .chamada img {
-    width: 50%;
     margin-right: 20px;
     border-radius: 10px;
 }
@@ -69,5 +68,5 @@
 .chamada h3 {
     text-align: center;
     font-size: 2em;
-    color: rgb(255, 120, 71);
+    color: #FFC834;
 }
